--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,7 +30,7 @@
         <item>4500</item>
     </string-array>
     <string name="euro">€</string>
-    <string name="title_activity_home">HomeActivity</string>
+    <string name="title_activity_home">Energy Spectrum</string>
     <string name="action_settings">Settings</string>
     <string name="section_format">Hello World from section: %1$d</string>
 
